Change Log for OpenXava project
===============================

- New xava:label taglib to include i18n labels in custom JSPs.
- Fix: Generate schema tool fails when the dialect is not specified.
- New ICON stereotype to store an icon of Material Design Icon into a property of an entity. 
- Fix: Internet Explorer CSS adjustments ignored for IE11. 
- German translation improved.
- Real Excel exporting by means of type=xls in GenerateReportAction or using the TypicalRealExcel controller.
- Documentation in xava.properties for new projects improved. 
- Documentation about module navigation improved.
- Fix: Clear button in IE is on top of calendar icon in date fields.
- @DescriptionsList combos have autocomplete functionality. 
- Icons instead of images in new created project from templates.
- Default parser now is JSP based instead of Java based.
- Better alignment for icons in button bar.
- ValidValuesRadioButton and ValidValuesVerticalRadioButton editors look improved. 
- Fix: ValidValuesVerticalRadioButton editor does not align the first option well. 
- Fix: Properties inside a group within a section are not cleared or saved.
- Fix: Label style does not work.
- Fix: referenceEditor.jsp name ignored in editors.xml.
- Fix: Editors with frame=true composite=true do not work correctly.
- Fix: Textfields are not aligned when there are validation errors.
- Fix: Frames not aligned with element collections.
- showReferenceView=true in descriptions list to show a combo and a detail view at the same time for a reference.
- Table created by default for images gallery allows big images. 
- Fix: Generating PDF in list fails with Android. 
- New method XObjects.execute() to call dynamically methods with three arguments.
- View.setEditable(member, state) works for references and collection in addition of plain properties.
- Fix: If view is not initialized View.setEditable(member, state) is not propagate to groups. 