@@ -25,3 +25,6 @@ createSchema.HSQL=CREATE SCHEMA ${schema} AUTHORIZATION DBA
 # Useful for testing or applications that do not need user sign in
 autologinUser=admin
 autologinPassword=admin
+
+# Other options
+showApplicationName=true
